# sc-port

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/data/: Common.cpp  Common.hpp  Images.cpp  Images.hpp  Map.cpp  Map.hpp  Palette.cpp  Palette.hpp  Sprite.cpp  Sprite.hpp  TextStrings.hpp  Tile.cpp  Tile.hpp
src/engine/: main.cpp
src/engine/audio/: AudioManager.cpp  AudioManager.hpp  Decoder.cpp  Decoder.hpp  Music.hpp  SoundStream.cpp
src/engine/audio/codec/: Vorbis_Decoder.cpp
src/engine/data/: Common.cpp  Common.hpp  Grp.cpp  Grp.hpp  Images.cpp  Map.cpp  Map.hpp  Palette.hpp  Sprite.cpp  Sprite.hpp  Tile.cpp  Tile.hpp
src/engine/entity/: ScriptedDoodad.cpp  ScriptedDoodad.hpp
src/engine/filesystem/: MpqFile.cpp  Storage.hpp  StorageFile.cpp
src/engine/meta/: PortraitTable.cpp  PortraitTable.hpp  SfxTable.hpp  UnitTable.cpp  UnitTable.hpp
src/engine/script/: IScriptEngine.cpp  IScriptEngine.hpp
src/engine/tests/: MapOpening.cpp
src/engine/video/: Decoder.cpp  Decoder.hpp  Video.cpp  Video.hpp
src/engine/video/codec/: Vp9_Decoder.cpp
src/engine/video/webm/: ParseCallback.cpp  ParseCallback.hpp  WebmReader.cpp  WebmReader.hpp
src/engine/view/: UnitSoundProfile.cpp  UnitSoundProfile.hpp  UnitTransmission.cpp  UnitTransmission.hpp
src/filesystem/: MpqArchive.cpp  MpqArchive.hpp  MpqFile.cpp  MpqFile.hpp  StorageFile.cpp  StorageFile.hpp  storage.cpp  storage.hpp  storage_file.cpp  storage_file.hpp
src/meta/: Unit.cpp  Unit.h
src/render/: Atlas.cpp
src/renderer/: A_Drawable.hpp  A_Graphics.hpp  A_SpriteSheet.hpp  A_Tileset.hpp  Common.cpp  Common.hpp  GraphicAPI.hpp  Graphics.hpp  SpriteFrameData.cpp  SpriteFrameData.hpp  TilesetData.hpp
src/renderer/render/: Atlas.hpp  Palette.hpp  Tileset.hpp
src/renderer/vulkan/: Api.cpp  Api.hpp  Atlas.cpp  Atlas.hpp  BufferAllocator.hpp  Command.cpp  Command.hpp  Config.cpp  Config.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  Device.cpp  Device.hpp  Drawable.cpp  Drawable.hpp  Graphics.cpp  Graphics.hpp  Queue.cpp  RenderPass.cpp  RenderPass.hpp  Sampler.cpp  Sampler.hpp  Shader.cpp  Shader.hpp  SpritePacker.cpp  SpritePacker.hpp  SpriteSheet.cpp  SpriteSheet.hpp  SwapChain.cpp  SwapChain.hpp  Texture.hpp  Vertex.cpp  Vertex.hpp  VulkanGraphics.cpp  VulkanGraphics.hpp  Window.cpp  Window.hpp
src/renderer/vulkan/device/: Device.cpp  Device.hpp  Format.cpp  Format.hpp  Framebuffer.cpp  Framebuffer.hpp  Queue.cpp  Queue.hpp  SwapChain.cpp  SwapChain.hpp
src/renderer/vulkan/memory/: Buffer.cpp  Buffer.hpp  BufferAllocator.cpp  BufferAllocator.hpp  Image.cpp  Image.hpp  MemoryManager.cpp  MemoryManager.hpp
src/script/: IScriptEngine.cpp  IScriptEngine.hpp
src/shared/: Cycle.cpp  Cycle.hpp  Loop.cpp  Loop.hpp
src/shared/audio/: AudioManager.cpp  AudioManager.hpp  Music.cpp  Music.hpp  SoundStream.hpp  Wave.hpp
src/shared/data/: Assets.cpp  Assets.hpp  Common.cpp  Common.hpp  Grp.cpp  Grp.hpp  Images.cpp  Images.hpp  Palette.hpp  Sprite.hpp  TextStrings.cpp  TextStrings.hpp  Tileset.cpp  Tileset.hpp  Vertex.hpp
src/shared/diagnostic/: Clock.cpp  Clock.hpp  Image.cpp  Image.hpp
src/shared/filesystem/: MpqArchive.cpp  StorageFile.cpp  StorageFile.hpp
src/shared/utility/: Factory.hpp
static/: frag.spv  shader.frag  shader.vert  tex_frag.spv  tex_vert.spv  vert.spv
static/src/: frag.spv  pal_shader.frag  shader.frag  shader.vert  tex_shader.frag  vert.spv
